--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -320,6 +320,9 @@
 html {
   height: 101%;
 }
+body {
+  padding-bottom: 60px;
+}
 h1,
 h1.title {
   margin: 20px 0 0;
@@ -1078,4 +1081,55 @@ table.search-criteria td {
   background-image: linear-gradient(to top, #cfcfcf, #e1e1e1);
   -webkit-box-shadow: 0 1px 1px #f0f0f0 inset;
   box-shadow: 0 1px 1px #f0f0f0 inset;
+}
+.financials-section {
+  margin-bottom: 30px;
+}
+.financials-section h4 {
+  font: bold 18px/18px Arial, Helvetica, sans-serif;
+  color: #4d4e50;
+  border-bottom: 1px dotted #d6d6d6;
+  display: inline-block;
+  margin: 0 0 10px;
+}
+.financials-section td {
+  font-size: 12px;
+}
+.financials-section table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  border: none;
+  margin-top: 10px;
+  width: 100%;
+}
+.financials-section tr:nth-child(2n+2) {
+  background-color: #e8e8e8;
+}
+.financials-section thead tr {
+  background: none;
+  height: 10px;
+}
+.financials-section th {
+  color: #000;
+  border: none;
+  padding: 0 !important;
+  margin: 0;
+  font: bold 14px/12px Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+.financials-section th:first-child {
+  text-align: left;
+}
+.financials-section td {
+  height: 30px;
+  color: #000;
+  padding: 0 12px;
+  font: normal 12px/12px Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+.financials-section td:first-child {
+  text-align: left;
+}
+.financials-section a {
+  color: #1e217c;
 }
