Updated client-side code. Still have work to do, but for the pretty much visually there. Have to update the colors on the first HighStock chart.

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -362,7 +362,7 @@ h1.title {
   display: inline-block;
   width: 177px;
   height: 12px;
-  background: url("../img/slider-full.jpg") no-repeat;
+  background: url("../img/slider-full.png") no-repeat;
   margin: 4px auto;
 }
 .slider .per-80 {
@@ -381,7 +381,7 @@ h1.title {
   display: inline-block;
   width: 177px;
   height: 12px;
-  background: url("../img/slider-empty.jpg") no-repeat;
+  background: url("../img/slider-empty.png") no-repeat;
   margin: 4px auto;
 }
 .slider .bar-container {
@@ -470,7 +470,7 @@ h1.title {
   float: right;
   color: #838383;
   display: inline-block;
-  height: 22px;
+  height: 18px;
   line-height: 22px;
   padding: 0 6px;
   border: 1px solid #a6a6a6;
@@ -600,7 +600,7 @@ h1.title {
   padding-bottom: 20px;
 }
 .progress-estimate .theme-three-bubble-progress {
-  background: url("../img/progress-3-step.png") no-repeat;
+  background: url("../img/progress-2-step.jpg") no-repeat;
   -webkit-background-size: 292px auto;
   -moz-background-size: 292px auto;
   background-size: 292px auto;
@@ -694,7 +694,7 @@ h1.title {
   font-weight: 100;
   font-size: 12px;
   outline: none;
-  padding: 4px 16px !important;
+  padding: 4px 10px !important;
 }
 .tabbed-content .tab-nav li.ui-state-active a {
   background: #008000;
@@ -862,8 +862,8 @@ table.search-criteria td {
   position: relative;
 }
 table.search-criteria td.max {
-  background: url("../img/x-button.jpg") no-repeat 90% center;
-  padding-right: 30px;
+  background: url("../img/x-button.png") no-repeat 86% center;
+  padding-right: 40px;
 }
 table.search-criteria .info {
   position: absolute;
@@ -888,6 +888,12 @@ table.search-criteria .info {
   min-height: 100px;
   height: auto;
   position: absolute;
+}
+.button-dropdown.button-customize-display {
+  margin-left: 180px;
+  position: relative;
+  left: 20px;
+  top: -1px;
 }
 .button-dropdown > .trigger {
   font: bold 12px Arial, Helvetica, sans-serif;
@@ -928,6 +934,10 @@ table.search-criteria .info {
   left: 1px;
   z-index: 1;
   font: bold 12px Arial, Helvetica, sans-serif;
+}
+.button-dropdown .dropdown.dropdown-padding {
+  padding: 10px;
+  width: 145px;
 }
 .button-dropdown .dropdown ul {
   margin: 0;
@@ -1109,7 +1119,7 @@ table.search-criteria .info {
   margin-right: 0px;
 }
 .pager li a {
-  color: #838383;
+  color: #1e2171;
   display: inline-block;
   height: 22px;
   line-height: 22px;
@@ -1229,11 +1239,20 @@ table.search-criteria .info {
   padding: 0 10px;
   color: #fff;
 }
+.back-company-profile {
+  font: bold 12px Arial, Helvetica, sans-serif;
+  color: #1e2171;
+  text-align: right;
+  border: none;
+  display: inline-block;
+  position: absolute;
+  right: 0px;
+}
 .back-button {
   float: left;
   margin: 0;
-  padding-left: 30px !important;
-  background: #1e2171 url("../img/back-button.jpg") no-repeat 10px 4px !important;
+  padding-left: 32px !important;
+  background: #1e2171 url("../img/back-button.jpg") no-repeat 8px 4px !important;
 }
 .comparable-button {
   display: inline;
@@ -1424,6 +1443,37 @@ table.search-criteria .info {
   color: #fff;
   height: 24px;
 }
+td .info {
+  cursor: pointer;
+}
+.tooltip {
+  position: absolute;
+  background: #ecf1c4;
+/* default fallback */
+  background: #000 transparent;
+/* nice browsers */
+  background: rgba(0,0,0,0.21);
+  display: none;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-background-clip: padding;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+.tooltip-content {
+  background: #ecf1c4;
+  color: #000;
+  margin: 4px;
+  padding: 10px;
+}
+.tooltip-arrow {
+  background: url("../img/tooltip-arrow.png") no-repeat;
+  position: absolute;
+  left: 50%;
+  margin-left: -7px;
+  width: 14px;
+  height: 14px;
+}
 #modal {
 /* default fallback */
   background: #000 transparent;
@@ -1470,4 +1520,15 @@ table.search-criteria .info {
   top: 10px;
   right: 10px;
   cursor: pointer;
+}
+.alpha-factor {
+  background: #f2f2f2;
+  border: 1px solid #c1c1c1;
+}
+.alpha-factor .slider {
+  display: inline-block;
+  width: 45%;
+}
+td.unchart a {
+  text-decoration: none;
 }
