--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -351,7 +351,7 @@ h1.title {
 }
 .page-title {
   font: bold 36px Arial, Helvetica, sans-serif;
-  color: #26356d;
+  color: #1e2171;
   margin: 20px 0 10px;
 }
 .hero {
@@ -381,7 +381,7 @@ h1.title {
   position: absolute;
   display: inline-block;
   width: 177px;
-  height: 12px;
+  height: 11px;
   background: url("../img/slider-full.png") no-repeat;
   margin: 4px auto;
 }
@@ -1269,6 +1269,43 @@ table.search-criteria .info {
   display: inline-block;
   position: absolute;
   right: 0px;
+  z-index: 10;
+}
+.legend-note {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  width: 100px;
+  position: absolute;
+  right: 10px;
+  bottom: 120px;
+  width: 200px;
+  z-index: 10;
+  font-size: 11px;
+}
+.legend-note a {
+  color: #9c9e9f;
+  padding: 10px 0;
+  height: 20px;
+  line-height: 20px;
+  margin-top: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  -webkit-transition: all 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -webkit-transition: all 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -moz-transition: all 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -o-transition: all 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -ms-transition: all 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.legend-note a:visited {
+  color: #1e2171;
+}
+.legend-note a:hover {
+  border-left: 4px solid #9c9e9f;
+  padding-left: 10px;
+  margin-left: -4px;
+  color: #1e2070;
 }
 .back-button {
   float: left;
@@ -1532,7 +1569,7 @@ td .info {
 }
 .modal-container h4 {
   font: bold 25px Arial, Helvetica, sans-serif;
-  color: #3d3d3d;
+  color: gray2;
 }
 .close-button {
   background: url("../img/modal-close.jpg") no-repeat;
