--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -839,6 +839,9 @@ h1.title {
 .checkbox .trigger:hover {
   background-position: 0 -36px;
 }
+.checkbox.checked {
+  background-position: 0 0;
+}
 .checkbox.checked .trigger,
 .checkbox.checked:hover {
   background-position: 0 0;
@@ -912,10 +915,16 @@ table.search-criteria .info {
   position: absolute;
 }
 .button-dropdown.button-customize-display {
-  margin-left: 180px;
+  margin-left: 90px;
   position: relative;
   left: 20px;
   top: -1px;
+}
+.button-dropdown.button-customize-display .dropdown {
+  width: 244px !important;
+}
+.button-dropdown.button-customize-display .trigger {
+  width: 206px !important;
 }
 .button-dropdown > .trigger {
   font: bold 12px Arial, Helvetica, sans-serif;
@@ -1507,17 +1516,14 @@ td .info {
 }
 .tooltip {
   position: absolute;
-  background: #ecf1c4;
-/* default fallback */
-  background: #000 transparent;
-/* nice browsers */
-  background: rgba(0,0,0,0.21);
+  background: #c0c0c0;
   display: none;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
+  width: 160px;
 }
 .tooltip-content {
   background: #ecf1c4;
@@ -1530,6 +1536,7 @@ td .info {
   position: absolute;
   left: 50%;
   margin-left: -7px;
+  margin-top: -4px;
   width: 14px;
   height: 14px;
 }
@@ -1590,4 +1597,24 @@ td .info {
 }
 td.unchart a {
   text-decoration: none;
+}
+#loading {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  background-color: rgba(255,255,255,0.8);
+  position: fixed;
+  z-index: 100;
+}
+#loading .loading-text {
+  font-size: 44px;
+  color: #1e2171;
+  text-align: center;
+  position: fixed;
+  margin: 0 auto;
+  width: 100%;
+  vertical-align: middle;
+  height: 30px;
+  top: 50%;
+  margin-top: -15px;
 }
