--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -5,6 +5,11 @@
  body {
     min-width: 1012px;
 }
+
+.template {
+	display: none;
+}
+
 /* Containers */
 .container_4 {
     margin-left: auto;
@@ -333,9 +338,6 @@ html {
   position: absolute;
   width: 22px;
   height: 20px;
-}
-td.max {
-  cursor: pointer;
 }
 * {
   font-family: Arial, Helvetica, sans-serif;
@@ -904,21 +906,32 @@ table.search-criteria td {
   text-align: center;
   font-weight: bold;
   font-size: 12px;
-  position: relative;
 }
 table.search-criteria td.max {
-  background: url("../img/x-button.png") no-repeat 86% center;
-  padding-right: 40px;
   padding-left: 0;
 }
-table.search-criteria .info {
-  position: absolute;
-  top: 8px;
-  padding-right: 20px;
-  display: inline-block;
-  background: url("../img/info-tab-large.png") no-repeat right top;
-  padding-top: 7px;
+
+table.search-criteria .label {
+	vertical-align: top;
+	padding-top: 7px;
 }
+
+table.search-criteria .info {
+  display: inline-block;
+  padding-top: 3px;
+  width: 80px;
+}
+
+table.search-criteria .label img {
+	float: right;
+	vertical-align:middle;
+}
+
+table.search-criteria .remove {
+	text-align: center;
+	cursor: pointer;
+}
+
 .button-dropdown {
   min-width: 172px;
   margin-right: 30px;
@@ -937,6 +950,7 @@ table.search-criteria .info {
 }
 .button-dropdown li {
   cursor: pointer;
+  font-size: 10px;
 }
 .button-dropdown.button-customize-display {
   margin-left: 90px;
@@ -951,7 +965,7 @@ table.search-criteria .info {
   width: 206px !important;
 }
 .button-dropdown > .trigger {
-  font: bold 12px Arial, Helvetica, sans-serif;
+  font: bold 10px Arial, Helvetica, sans-serif;
   color: #121444;
   padding-left: 12px;
   padding-right: 20px;
@@ -1077,7 +1091,6 @@ table.search-criteria .info {
 .module-stock-slider .stock-bar-container {
   height: 16px;
   position: relative;
-  left: 4px;
 }
 .module-stock-slider .bar {
   background: #9c9e9f;
@@ -1100,12 +1113,6 @@ table.search-criteria .info {
   margin-top: 0px;
 }
 .module-stock-slider .slider-bar {
-/*background-color: #bed600;
-      background-image: -webkit-gradient(linear, left top, left bottom, from(#bed600), to(#879f00));
-      background-image: -webkit-linear-gradient(bottom, #bed600, #879f00);
-      background-image:    -moz-linear-gradient(bottom, #bed600, #879f00);
-      background-image:      -o-linear-gradient(bottom, #bed600, #879f00);
-      background-image:         linear-gradient(to bottom, #bed600, #879f00);*/
   position: absolute;
   top: 50%;
   margin-top: -3px;
@@ -1581,6 +1588,7 @@ td .info {
   -moz-background-clip: padding;
   background-clip: padding-box;
   width: 160px;
+  font-size: 10px;
 }
 .tooltip-content {
   background: #ecf1c4;
@@ -1669,7 +1677,17 @@ td .info {
   background: url("../img/modal-close.jpg") no-repeat;
   height: 18px;
   width: 18px;
+  cursor: pointer;
 }
+
+#modal.prompt .alert-display {
+	display: none;
+}
+
+#modal.alert .prompt-display {
+	display: none;
+}
+
 .modal-container {
   top: 30%;
   position: fixed;
@@ -1681,10 +1699,17 @@ td .info {
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
+
 .modal-container h4 {
   font: bold 25px Arial, Helvetica, sans-serif;
   color: gray2;
 }
+
+.modal-container h4 span {
+  font: normal 11px Arial, Helvetica, sans-serif;
+  color: gray2;
+}
+
 .close-button {
   background: url("../img/modal-close.jpg") no-repeat;
   width: 18px;
